Closed Bug 262056 Opened 21 years ago Closed 20 years ago

username in password manager case sensitive

Categories

(Toolkit :: Password Manager, defect)

x86
Windows XP
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: long.zheng, Assigned: jruderman)

References

()

Details

(Keywords: testcase)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.3) Gecko/20040917 Firefox/0.10 (MOOX M1) Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.3) Gecko/20040917 Firefox/0.10 (MOOX M1) In a login form, while filling your username, only the entries that matches the case of your partially typed username appears. All entries matching the first letter should appear, regardless of case. Password manager is case sensitive. This only occurs with usernames, not normal forms (Autocomplete). Reproducible: Always Steps to Reproduce: 1. Goto http://longstuff.foruminsider.com/mozilla/testcase.htm 2. Fill in "Mozilla" for username and "Rules" for password 3. Click Submit 4. Ignore error, click Back. 5. Type in "m" for username. Actual Results: "Mozilla" is not a returned entry Expected Results: "Mozilla" should be returned
Confirmed. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.3) Gecko/20040926 Firefox/0.10
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: testcase
Assignee: bryner → jruderman
This patch only affects the autocomplete suggestions. It does not make the "fill in the password after the user fills in the username" behavior extend to case-insensitive matches and it does not prevent you from storing different passwords for usernames "foo" and "FOO".
Attachment #194274 - Flags: review?(bryner)
Attachment #194274 - Flags: review?(bryner) → review+
The testcase site is down. I made a new one: http://www.squarefree.com/bug262056/.
There was an easy-to-resolve merge conflict in the makefile.
Attachment #194274 - Attachment is obsolete: true
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: