Fix bug 262056, "username in password manager case sensitive". r=bryner.